2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_ENABLE_MULTIPROCESSING, 
	RTEMS_ENABLE_POSIX, RTEMS_ENABLE_ITRON, RTEMS_ENABLE_INLINES,
	RTEMS_ENABLE_RTEMS_DEBUG, RTEMS_CHECK_RTEMS_DEBUG,
	RTEMS_CHECK_NEWLIB.

2002-06-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove multilib support.
	* configure.ac: Ditto.
	* sapi/Makefile.am: Ditto.

2002-04-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove ENABLE_GCC28.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* rtems/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* sapi/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-01-06	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: Added aclocal.m4 and configure.

2002-01-06	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: New file.

2002-01-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ChangeLog: New.
	* configure.ac: New.
	* Makefile.am: New.
	* rtems/*: Copied from c/src/exec/rtems/optman.
	* sapi/*: Copied from c/src/exec/sapi/optman.