@@ -13,6 +13,8 @@ include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
 include $(top_srcdir)/../../../automake/compile.am
 include $(top_srcdir)/../../../automake/lib.am
 
+bsplib_DATA = $(PGMS)
+
 TMPINSTALL_FILES += \
     $(C_FILES:%.c=$(PROJECT_RELEASE)/lib$(MULTISUBDIR)/%$(LIB_VARIANT).rel)
 
