@@ -1,3 +1,9 @@
+2002-07-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* sapi/Makefile.am: Add bsplib_DATA = $(PGMS).
+	Remove ASM4FLAGS.
+	* rtems/Makefile.am: Add bsplib_DATA = $(PGMS).
+
 2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Remove RTEMS_ENABLE_MULTIPROCESSING, 
